--- a/style.css
+++ b/style.css
@@ -82,4 +82,18 @@ h1{
     background-color: #EEE;
     overflow: hidden;
     height: 200px;
+    box-shadow: 10px 10px 28px 0px rgba(0,0,0,0.75);
 }
+
+#profile-page .profile-image {
+    margin: 40px;
+}
+
+#profile-page .profile-image img {
+    margin: 0 auto;
+}
+
+#profile-page .new-post {
+    text-align: center;
+}
+
