--- a/style.css
+++ b/style.css
@@ -34,9 +34,10 @@ h1{
 
 .row{
     background-color: white;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     margin-bottom: 5%;
     border-radius: 10px;
+    box-shadow: 10px 10px 28px 0 rgba(0,0,0,0.75);
 }
 
 .col-xs-4 {
