--- a/style.css
+++ b/style.css
@@ -111,12 +111,25 @@ h1{
     transform: translate(-50%,-50%);
 }
 
-.jumbotron h1{
-    font-family: 'Short Stack', cursive;
+.jumbotron h2{
+    font-family: 'Oswald', sans-serif;
     text-shadow: 2px 2px 2px #C0C6D3;
 }
 
 .form-control{
     display: inline-block;
     width: auto;
+}
+
+#logo{
+    width: 30vw;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+#logo img{
+    width: 100%;
+    height: 100%;
 }
